--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@splidejs/react-splide": "^0.7.12",
-    "@splidejs/splide-extension-video": "^0.8.0",
     "html-to-text": "^9.0.5",
     "next": "13.2.4",
     "next-sitemap": "^4.1.3",
@@ -20,9 +19,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
-    "react-icons": "^4.8.0",
-    "react-portable-text": "^0.6.0",
-    "react-text-transition": "^3.1.0"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
